--- a/.github/workflows/on-master.yaml
+++ b/.github/workflows/on-master.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - statediff_at_anyblock-1.9.11
+      - v1.9.23-statediff-0.0.11
       - v1.9.23-statediff-0.0.10
       - v1.9.23-statediff-0.0.9
 
